GEOT-1749, ignore blob attributes, trunk version
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@29693 e5c1c795-43da-0310-a71f-fac65c449510